test/errors/incompatibleRangeBounds.compopts
--detailed-errors # incompatibleRangeBounds-detailed.good
--no-detailed-errors # incompatibleRangeBounds-brief.good
